--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,7 +18,7 @@
       <!-- Header -->
       <header class="glass-header">
         <div class="logo">
-          <span class="icon">👁️</span>
+          <img src="{{ url_for('static', filename='img/logo.png') }}" alt="TC Logo" class="logo-img">
           <h1>Webcam Object Detector <span class="badge">v2.0</span></h1>
         </div>
         <div class="branding">
